// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Signed Transaction Table should render 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="SignedTransactionTable"
  >
    <div
      class="sc-AxiKw iDVQWj -mt-3"
      role="table"
    >
      <table
        cellpadding="0"
        class="table-auto"
      >
        <thead>
          <tr
            class="border-b border-theme-neutral-300 dark:border-theme-neutral-800"
            role="row"
          >
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  ID
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Date
                </div>
                <div
                  class="flex items-center ml-2 text-theme-neutral dark:text-theme-neutral-dark"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxirZ jMwzyA"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top ml-25"
              >
                <div>
                  Recipient
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--3"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top justify-center"
              >
                <div>
                  Info
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--4"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top justify-center"
              >
                <div>
                  Status
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold  "
              colspan="1"
              data-testid="table__th--5"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top justify-end no-border"
              >
                <div>
                  Amount
                </div>
                <div
                  class="flex items-center ml-2 text-theme-neutral dark:text-theme-neutral-dark"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxirZ jMwzyA"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--6"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top hidden"
              >
                <div>
                  Sign
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="sc-AxhUy gFzLrG group"
            data-testid="TableRow"
          >
            <td>
              <div
                class="sc-AxhCb hbkWNL"
              >
                <span
                  class="sc-AxgMl fFPQpl"
                  data-testid="TruncateMiddle"
                >
                  19a78b … 6993dd
                </span>
              </div>
            </td>
            <td
              class="w-50"
            >
              <div
                class="sc-AxhCb udmdB text-theme-secondary-text"
              >
                <span
                  data-testid="TransactionRow__timestamp"
                >
                  31 Jul 2020 16:34:41
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb udmdB space-x-4"
              >
                <div
                  class="flex items-center -space-x-1"
                  data-testid="TransactionRowMode"
                >
                  <div
                    class="sc-Axmtr hVOxCZ border-theme-danger-contrast text-theme-danger dark:border-theme-danger-400 dark:text-theme-danger-400"
                  >
                    <div
                      class="sc-AxirZ iQaTP"
                      data-testid="TransactionRowMode__Sent"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        sent.svg
                      </svg>
                    </div>
                  </div>
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full"
                    >
                      <img
                        alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                        title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="inline-flex items-center"
                >
                  <span
                    class="sc-AxgMl fFPQpl text-theme-text truncate font-semibold text-base"
                    data-testid="address__wallet-address"
                  >
                    D8rr7B … s6YUYD
                  </span>
                </div>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb udmdB justify-center"
              >
                <div
                  class="inline-flex space-x-1 align-middle"
                  data-testid="TransactionRowInfo"
                >
                  <span
                    class="p-1"
                  >
                    <div
                      class="sc-AxirZ jZjiyi"
                      data-testid="TransactionRowInfo__multiSignature"
                      height="14"
                      width="22"
                    >
                      <svg>
                        multisig.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
            </td>
            <td
              class="w-16"
            >
              <div
                class="sc-AxhCb udmdB justify-center truncate"
              >
                <span
                  class="p-1 text-theme-success-500"
                >
                  <div
                    class="sc-AxirZ eEbZjj"
                    height="20"
                    width="20"
                  >
                    <svg>
                      send.svg
                    </svg>
                  </div>
                </span>
              </div>
            </td>
            <td
              class="w-56"
            >
              <div
                class="sc-AxhCb udmdB justify-end"
              >
                <div
                  class="sc-AxheI kinEEx"
                  color="danger"
                  data-testid="TransactionRowAmount"
                >
                  <span
                    data-testid="Amount"
                  >
                    0.00000002 DARK
                  </span>
                </div>
              </div>
            </td>
            <td
              class="w-24"
            >
              <div
                class="sc-AxhCb fYMCjD justify-end"
              />
            </td>
          </tr>
          <tr
            class="sc-AxhUy gFzLrG group"
            data-testid="TableRow"
          >
            <td>
              <div
                class="sc-AxhCb hbkWNL"
              >
                <span
                  class="sc-AxgMl fFPQpl"
                  data-testid="TruncateMiddle"
                >
                  e4d245 … 150377
                </span>
              </div>
            </td>
            <td
              class="w-50"
            >
              <div
                class="sc-AxhCb udmdB text-theme-secondary-text"
              >
                <span
                  data-testid="TransactionRow__timestamp"
                >
                  31 Jul 2020 16:34:41
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb udmdB space-x-4"
              >
                <div
                  class="flex items-center -space-x-1"
                  data-testid="TransactionRowMode"
                >
                  <div
                    class="sc-Axmtr hVOxCZ border-theme-danger-contrast text-theme-danger dark:border-theme-danger-400 dark:text-theme-danger-400"
                  >
                    <div
                      class="sc-AxirZ iQaTP"
                      data-testid="TransactionRowMode__Sent"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        sent.svg
                      </svg>
                    </div>
                  </div>
                  <div
                    class="sc-Axmtr hVOxCZ border-theme-text text-theme-text dark:border-theme-neutral-600 dark:text-theme-neutral-600"
                    data-testid="TransactionRowRecipientIcon"
                  >
                    <div
                      class="sc-AxirZ hmuEJr"
                      height="22"
                      width="22"
                    >
                      <svg>
                        multisig.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <span
                  class="font-semibold text-theme-text"
                  data-testid="TransactionRowRecipientLabel"
                >
                  Multisignature
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb udmdB justify-center"
              >
                <div
                  class="inline-flex space-x-1 align-middle"
                  data-testid="TransactionRowInfo"
                >
                  <span
                    class="p-1"
                  >
                    <div
                      class="sc-AxirZ jZjiyi"
                      data-testid="TransactionRowInfo__multiSignature"
                      height="14"
                      width="22"
                    >
                      <svg>
                        multisig.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
            </td>
            <td
              class="w-16"
            >
              <div
                class="sc-AxhCb udmdB justify-center truncate"
              >
                <span
                  class="p-1 text-theme-success-500"
                >
                  <div
                    class="sc-AxirZ eEbZjj"
                    height="20"
                    width="20"
                  >
                    <svg>
                      send.svg
                    </svg>
                  </div>
                </span>
              </div>
            </td>
            <td
              class="w-56"
            >
              <div
                class="sc-AxhCb udmdB justify-end"
              >
                <div
                  class="sc-AxheI kinEEx"
                  color="danger"
                  data-testid="TransactionRowAmount"
                >
                  <span
                    data-testid="Amount"
                  >
                    15 DARK
                  </span>
                </div>
              </div>
            </td>
            <td
              class="w-24"
            >
              <div
                class="sc-AxhCb fYMCjD justify-end"
              />
            </td>
          </tr>
          <tr
            class="sc-AxhUy gFzLrG group"
            data-testid="TableRow"
          >
            <td>
              <div
                class="sc-AxhCb hbkWNL"
              >
                <span
                  class="sc-AxgMl fFPQpl"
                  data-testid="TruncateMiddle"
                >
                  db2639 … 408e57
                </span>
              </div>
            </td>
            <td
              class="w-50"
            >
              <div
                class="sc-AxhCb udmdB text-theme-secondary-text"
              >
                <span
                  data-testid="TransactionRow__timestamp"
                >
                  31 Jul 2020 16:34:41
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb udmdB space-x-4"
              >
                <div
                  class="flex items-center -space-x-1"
                  data-testid="TransactionRowMode"
                >
                  <div
                    class="sc-Axmtr hVOxCZ border-theme-danger-contrast text-theme-danger dark:border-theme-danger-400 dark:text-theme-danger-400"
                  >
                    <div
                      class="sc-AxirZ iQaTP"
                      data-testid="TransactionRowMode__Sent"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        sent.svg
                      </svg>
                    </div>
                  </div>
                  <div
                    class="sc-Axmtr hVOxCZ border-theme-text text-theme-text dark:border-theme-neutral-600 dark:text-theme-neutral-600"
                    data-testid="TransactionRowRecipientIcon"
                  >
                    <div
                      class="sc-AxirZ hmuEJr"
                      height="22"
                      width="22"
                    >
                      <svg>
                        multipayment.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <span
                  class="font-semibold text-theme-text"
                  data-testid="TransactionRowRecipientLabel"
                >
                  Multipayment
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb udmdB justify-center"
              >
                <div
                  class="inline-flex space-x-1 align-middle"
                  data-testid="TransactionRowInfo"
                >
                  <span
                    class="p-1"
                  >
                    <div
                      class="sc-AxirZ jZjiyi"
                      data-testid="TransactionRowInfo__multiSignature"
                      height="14"
                      width="22"
                    >
                      <svg>
                        multisig.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
            </td>
            <td
              class="w-16"
            >
              <div
                class="sc-AxhCb udmdB justify-center truncate"
              >
                <span
                  class="p-1 text-theme-success-500"
                >
                  <div
                    class="sc-AxirZ eEbZjj"
                    height="20"
                    width="20"
                  >
                    <svg>
                      send.svg
                    </svg>
                  </div>
                </span>
              </div>
            </td>
            <td
              class="w-56"
            >
              <div
                class="sc-AxhCb udmdB justify-end"
              >
                <div
                  class="sc-AxheI kinEEx"
                  color="danger"
                  data-testid="TransactionRowAmount"
                >
                  <span
                    data-testid="Amount"
                  >
                    0.00000001 DARK
                  </span>
                </div>
              </div>
            </td>
            <td
              class="w-24"
            >
              <div
                class="sc-AxhCb fYMCjD justify-end"
              />
            </td>
          </tr>
          <tr
            class="sc-AxhUy gFzLrG group"
            data-testid="TableRow"
          >
            <td>
              <div
                class="sc-AxhCb hbkWNL"
              >
                <span
                  class="sc-AxgMl fFPQpl"
                  data-testid="TruncateMiddle"
                >
                  55467c … 6e7c68
                </span>
              </div>
            </td>
            <td
              class="w-50"
            >
              <div
                class="sc-AxhCb udmdB text-theme-secondary-text"
              >
                <span
                  data-testid="TransactionRow__timestamp"
                >
                  31 Jul 2020 16:34:41
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb udmdB space-x-4"
              >
                <div
                  class="flex items-center -space-x-1"
                  data-testid="TransactionRowMode"
                >
                  <div
                    class="sc-Axmtr hVOxCZ border-theme-danger-contrast text-theme-danger dark:border-theme-danger-400 dark:text-theme-danger-400"
                  >
                    <div
                      class="sc-AxirZ iQaTP"
                      data-testid="TransactionRowMode__Sent"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        sent.svg
                      </svg>
                    </div>
                  </div>
                  <div
                    class="sc-Axmtr hVOxCZ border-theme-text text-theme-text dark:border-theme-neutral-600 dark:text-theme-neutral-600"
                    data-testid="TransactionRowRecipientIcon"
                  >
                    <div
                      class="sc-AxirZ hmuEJr"
                      height="22"
                      width="22"
                    >
                      <svg>
                        vote.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <span
                  class="font-semibold text-theme-text"
                  data-testid="TransactionRowRecipientLabel"
                >
                  Vote
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb udmdB justify-center"
              >
                <div
                  class="inline-flex space-x-1 align-middle"
                  data-testid="TransactionRowInfo"
                >
                  <span
                    class="p-1"
                  >
                    <div
                      class="sc-AxirZ jZjiyi"
                      data-testid="TransactionRowInfo__multiSignature"
                      height="14"
                      width="22"
                    >
                      <svg>
                        multisig.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
            </td>
            <td
              class="w-16"
            >
              <div
                class="sc-AxhCb udmdB justify-center truncate"
              >
                <span
                  class="p-1 text-theme-success-500"
                >
                  <div
                    class="sc-AxirZ eEbZjj"
                    height="20"
                    width="20"
                  >
                    <svg>
                      send.svg
                    </svg>
                  </div>
                </span>
              </div>
            </td>
            <td
              class="w-56"
            >
              <div
                class="sc-AxhCb udmdB justify-end"
              >
                <div
                  class="sc-AxheI kinEEx"
                  color="danger"
                  data-testid="TransactionRowAmount"
                >
                  <span
                    data-testid="Amount"
                  >
                    0.00000001 DARK
                  </span>
                </div>
              </div>
            </td>
            <td
              class="w-24"
            >
              <div
                class="sc-AxhCb fYMCjD justify-end"
              />
            </td>
          </tr>
          <tr
            class="sc-AxhUy gFzLrG group"
            data-testid="TableRow"
          >
            <td>
              <div
                class="sc-AxhCb hbkWNL"
              >
                <span
                  class="sc-AxgMl fFPQpl"
                  data-testid="TruncateMiddle"
                >
                  5a2ce1 … e9017c
                </span>
              </div>
            </td>
            <td
              class="w-50"
            >
              <div
                class="sc-AxhCb udmdB text-theme-secondary-text"
              >
                <span
                  data-testid="TransactionRow__timestamp"
                >
                  31 Jul 2020 16:34:41
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb udmdB space-x-4"
              >
                <div
                  class="flex items-center -space-x-1"
                  data-testid="TransactionRowMode"
                >
                  <div
                    class="sc-Axmtr hVOxCZ border-theme-danger-contrast text-theme-danger dark:border-theme-danger-400 dark:text-theme-danger-400"
                  >
                    <div
                      class="sc-AxirZ iQaTP"
                      data-testid="TransactionRowMode__Sent"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        sent.svg
                      </svg>
                    </div>
                  </div>
                  <div
                    class="sc-Axmtr hVOxCZ border-theme-text text-theme-text dark:border-theme-neutral-600 dark:text-theme-neutral-600"
                    data-testid="TransactionRowRecipientIcon"
                  >
                    <div
                      class="sc-AxirZ hmuEJr"
                      height="22"
                      width="22"
                    >
                      <svg>
                        unvote.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <span
                  class="font-semibold text-theme-text"
                  data-testid="TransactionRowRecipientLabel"
                >
                  Unvote
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb udmdB justify-center"
              >
                <div
                  class="inline-flex space-x-1 align-middle"
                  data-testid="TransactionRowInfo"
                >
                  <span
                    class="p-1"
                  >
                    <div
                      class="sc-AxirZ jZjiyi"
                      data-testid="TransactionRowInfo__multiSignature"
                      height="14"
                      width="22"
                    >
                      <svg>
                        multisig.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
            </td>
            <td
              class="w-16"
            >
              <div
                class="sc-AxhCb udmdB justify-center truncate"
              >
                <span
                  class="p-1 text-theme-success-500"
                >
                  <div
                    class="sc-AxirZ eEbZjj"
                    height="20"
                    width="20"
                  >
                    <svg>
                      send.svg
                    </svg>
                  </div>
                </span>
              </div>
            </td>
            <td
              class="w-56"
            >
              <div
                class="sc-AxhCb udmdB justify-end"
              >
                <div
                  class="sc-AxheI kinEEx"
                  color="danger"
                  data-testid="TransactionRowAmount"
                >
                  <span
                    data-testid="Amount"
                  >
                    0.00000001 DARK
                  </span>
                </div>
              </div>
            </td>
            <td
              class="w-24"
            >
              <div
                class="sc-AxhCb fYMCjD justify-end"
              />
            </td>
          </tr>
          <tr
            class="sc-AxhUy gFzLrG group"
            data-testid="TableRow"
          >
            <td>
              <div
                class="sc-AxhCb hbkWNL"
              >
                <span
                  class="sc-AxgMl fFPQpl"
                  data-testid="TruncateMiddle"
                >
                  c99038 … 446c5b
                </span>
              </div>
            </td>
            <td
              class="w-50"
            >
              <div
                class="sc-AxhCb udmdB text-theme-secondary-text"
              >
                <span
                  data-testid="TransactionRow__timestamp"
                >
                  31 Jul 2020 16:34:41
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb udmdB space-x-4"
              >
                <div
                  class="flex items-center -space-x-1"
                  data-testid="TransactionRowMode"
                >
                  <div
                    class="sc-Axmtr hVOxCZ border-theme-danger-contrast text-theme-danger dark:border-theme-danger-400 dark:text-theme-danger-400"
                  >
                    <div
                      class="sc-AxirZ iQaTP"
                      data-testid="TransactionRowMode__Sent"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        sent.svg
                      </svg>
                    </div>
                  </div>
                  <div
                    class="sc-Axmtr hVOxCZ border-theme-text text-theme-text dark:border-theme-neutral-600 dark:text-theme-neutral-600"
                    data-testid="TransactionRowRecipientIcon"
                  >
                    <div
                      class="sc-AxirZ hmuEJr"
                      height="22"
                      width="22"
                    >
                      <svg>
                        ipfs.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <span
                  class="font-semibold text-theme-text"
                  data-testid="TransactionRowRecipientLabel"
                >
                  IPFS
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb udmdB justify-center"
              >
                <div
                  class="inline-flex space-x-1 align-middle"
                  data-testid="TransactionRowInfo"
                >
                  <span
                    class="p-1"
                  >
                    <div
                      class="sc-AxirZ jZjiyi"
                      data-testid="TransactionRowInfo__multiSignature"
                      height="14"
                      width="22"
                    >
                      <svg>
                        multisig.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
            </td>
            <td
              class="w-16"
            >
              <div
                class="sc-AxhCb udmdB justify-center truncate"
              >
                <span
                  class="p-1 text-theme-success-500"
                >
                  <div
                    class="sc-AxirZ eEbZjj"
                    height="20"
                    width="20"
                  >
                    <svg>
                      send.svg
                    </svg>
                  </div>
                </span>
              </div>
            </td>
            <td
              class="w-56"
            >
              <div
                class="sc-AxhCb udmdB justify-end"
              >
                <div
                  class="sc-AxheI kinEEx"
                  color="danger"
                  data-testid="TransactionRowAmount"
                >
                  <span
                    data-testid="Amount"
                  >
                    0.00000001 DARK
                  </span>
                </div>
              </div>
            </td>
            <td
              class="w-24"
            >
              <div
                class="sc-AxhCb fYMCjD justify-end"
              />
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Signed Transaction Table should show as awaiting confirmations 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="SignedTransactionTable"
  >
    <div
      class="sc-AxiKw iDVQWj -mt-3"
      role="table"
    >
      <table
        cellpadding="0"
        class="table-auto"
      >
        <thead>
          <tr
            class="border-b border-theme-neutral-300 dark:border-theme-neutral-800"
            role="row"
          >
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  ID
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Date
                </div>
                <div
                  class="flex items-center ml-2 text-theme-neutral dark:text-theme-neutral-dark"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxirZ jMwzyA"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold "
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top hidden no-border"
              >
                <div>
                  Type
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--3"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Recipient
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--4"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top justify-center"
              >
                <div>
                  Info
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--5"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top justify-center"
              >
                <div>
                  Status
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--6"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top justify-end"
              >
                <div>
                  Amount
                </div>
                <div
                  class="flex items-center ml-2 text-theme-neutral dark:text-theme-neutral-dark"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxirZ jMwzyA"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold "
              colspan="1"
              data-testid="table__th--7"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top invisible no-border w-24"
              >
                <div>
                  Sign
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="sc-AxhUy gFzLrG group"
            data-testid="TableRow"
          >
            <td>
              <div
                class="sc-AxhCb osoeH"
              >
                <span
                  class="sc-AxgMl fFPQpl"
                  data-testid="TruncateMiddle"
                >
                  19a78b … 6993dd
                </span>
              </div>
            </td>
            <td
              class="w-48"
            >
              <div
                class="sc-AxhCb kdNpYF text-theme-secondary-text"
              >
                <span
                  data-testid="TransactionRow__timestamp"
                >
                  31 Jul 2020 16:34:41
                </span>
              </div>
            </td>
            <td
              class="w-32"
            >
              <div
                class="sc-AxhCb kdNpYF"
              >
                <div
                  class="flex items-center -space-x-1"
                  data-testid="TransactionRowMode"
                >
                  <div
                    class="sc-Axmtr hVOxCZ border-theme-danger-contrast text-theme-danger dark:border-theme-danger-400 dark:text-theme-danger-400"
                  >
                    <div
                      class="sc-AxirZ iQaTP"
                      data-testid="TransactionRowMode__Sent"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        sent.svg
                      </svg>
                    </div>
                  </div>
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full"
                    >
                      <img
                        alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                        title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb kdNpYF"
              >
                <div
                  class="inline-flex items-center"
                >
                  <span
                    class="sc-AxgMl fFPQpl text-theme-text truncate font-semibold text-base"
                    data-testid="address__wallet-address"
                  >
                    D8rr7B … s6YUYD
                  </span>
                </div>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb kdNpYF justify-center"
              >
                <div
                  class="inline-flex space-x-1 align-middle"
                  data-testid="TransactionRowInfo"
                >
                  <span
                    class="p-1"
                  >
                    <div
                      class="sc-AxirZ jZjiyi"
                      data-testid="TransactionRowInfo__multiSignature"
                      height="14"
                      width="22"
                    >
                      <svg>
                        multisig.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
            </td>
            <td
              class="w-16"
            >
              <div
                class="sc-AxhCb kdNpYF justify-center truncate"
              >
                <span
                  class="p-1 text-theme-warning-300"
                >
                  <div
                    class="sc-AxirZ gfsEGU"
                    height="22"
                    width="30"
                  >
                    <svg>
                      status-pending.svg
                    </svg>
                  </div>
                </span>
              </div>
            </td>
            <td
              class="w-56"
            >
              <div
                class="sc-AxhCb kdNpYF justify-end"
              >
                <div
                  class="sc-AxheI kinEEx"
                  color="danger"
                  data-testid="TransactionRowAmount"
                >
                  <span
                    data-testid="Amount"
                  >
                    0.00000002 DARK
                  </span>
                </div>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb dazjdf justify-end"
              />
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Signed Transaction Table should show as awaiting other wallets signatures 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="SignedTransactionTable"
  >
    <div
      class="sc-AxiKw iDVQWj -mt-3"
      role="table"
    >
      <table
        cellpadding="0"
        class="table-auto"
      >
        <thead>
          <tr
            class="border-b border-theme-neutral-300 dark:border-theme-neutral-800"
            role="row"
          >
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  ID
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Date
                </div>
                <div
                  class="flex items-center ml-2 text-theme-neutral dark:text-theme-neutral-dark"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxirZ jMwzyA"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top ml-25"
              >
                <div>
                  Recipient
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--3"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top justify-center"
              >
                <div>
                  Info
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--4"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top justify-center"
              >
                <div>
                  Status
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold  "
              colspan="1"
              data-testid="table__th--5"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top justify-end no-border"
              >
                <div>
                  Amount
                </div>
                <div
                  class="flex items-center ml-2 text-theme-neutral dark:text-theme-neutral-dark"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxirZ jMwzyA"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--6"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top hidden"
              >
                <div>
                  Sign
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="sc-AxhUy gFzLrG group"
            data-testid="TableRow"
          >
            <td>
              <div
                class="sc-AxhCb hbkWNL"
              >
                <span
                  class="sc-AxgMl fFPQpl"
                  data-testid="TruncateMiddle"
                >
                  19a78b … 6993dd
                </span>
              </div>
            </td>
            <td
              class="w-50"
            >
              <div
                class="sc-AxhCb udmdB text-theme-secondary-text"
              >
                <span
                  data-testid="TransactionRow__timestamp"
                >
                  31 Jul 2020 16:34:41
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb udmdB space-x-4"
              >
                <div
                  class="flex items-center -space-x-1"
                  data-testid="TransactionRowMode"
                >
                  <div
                    class="sc-Axmtr hVOxCZ border-theme-danger-contrast text-theme-danger dark:border-theme-danger-400 dark:text-theme-danger-400"
                  >
                    <div
                      class="sc-AxirZ iQaTP"
                      data-testid="TransactionRowMode__Sent"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        sent.svg
                      </svg>
                    </div>
                  </div>
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full"
                    >
                      <img
                        alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                        title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="inline-flex items-center"
                >
                  <span
                    class="sc-AxgMl fFPQpl text-theme-text truncate font-semibold text-base"
                    data-testid="address__wallet-address"
                  >
                    D8rr7B … s6YUYD
                  </span>
                </div>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb udmdB justify-center"
              >
                <div
                  class="inline-flex space-x-1 align-middle"
                  data-testid="TransactionRowInfo"
                >
                  <span
                    class="p-1"
                  >
                    <div
                      class="sc-AxirZ jZjiyi"
                      data-testid="TransactionRowInfo__multiSignature"
                      height="14"
                      width="22"
                    >
                      <svg>
                        multisig.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
            </td>
            <td
              class="w-16"
            >
              <div
                class="sc-AxhCb udmdB justify-center truncate"
              >
                <span
                  class="p-1 text-theme-warning-300"
                >
                  <div
                    class="sc-AxirZ gfsEGU"
                    height="22"
                    width="30"
                  >
                    <svg>
                      awaiting-other-signature.svg
                    </svg>
                  </div>
                </span>
              </div>
            </td>
            <td
              class="w-56"
            >
              <div
                class="sc-AxhCb udmdB justify-end"
              >
                <div
                  class="sc-AxheI kinEEx"
                  color="danger"
                  data-testid="TransactionRowAmount"
                >
                  <span
                    data-testid="Amount"
                  >
                    0.00000002 DARK
                  </span>
                </div>
              </div>
            </td>
            <td
              class="w-24"
            >
              <div
                class="sc-AxhCb fYMCjD justify-end"
              />
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Signed Transaction Table should show as awaiting the wallet signature 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="SignedTransactionTable"
  >
    <div
      class="sc-AxiKw iDVQWj -mt-3"
      role="table"
    >
      <table
        cellpadding="0"
        class="table-auto"
      >
        <thead>
          <tr
            class="border-b border-theme-neutral-300 dark:border-theme-neutral-800"
            role="row"
          >
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  ID
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Date
                </div>
                <div
                  class="flex items-center ml-2 text-theme-neutral dark:text-theme-neutral-dark"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxirZ jMwzyA"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top ml-25"
              >
                <div>
                  Recipient
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--3"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top justify-center"
              >
                <div>
                  Info
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--4"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top justify-center"
              >
                <div>
                  Status
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold  "
              colspan="1"
              data-testid="table__th--5"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top justify-end no-border"
              >
                <div>
                  Amount
                </div>
                <div
                  class="flex items-center ml-2 text-theme-neutral dark:text-theme-neutral-dark"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxirZ jMwzyA"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--6"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top hidden"
              >
                <div>
                  Sign
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="sc-AxhUy gFzLrG group"
            data-testid="TableRow"
          >
            <td>
              <div
                class="sc-AxhCb hbkWNL"
              >
                <span
                  class="sc-AxgMl fFPQpl"
                  data-testid="TruncateMiddle"
                >
                  19a78b … 6993dd
                </span>
              </div>
            </td>
            <td
              class="w-50"
            >
              <div
                class="sc-AxhCb udmdB text-theme-secondary-text"
              >
                <span
                  data-testid="TransactionRow__timestamp"
                >
                  31 Jul 2020 16:34:41
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb udmdB space-x-4"
              >
                <div
                  class="flex items-center -space-x-1"
                  data-testid="TransactionRowMode"
                >
                  <div
                    class="sc-Axmtr hVOxCZ border-theme-danger-contrast text-theme-danger dark:border-theme-danger-400 dark:text-theme-danger-400"
                  >
                    <div
                      class="sc-AxirZ iQaTP"
                      data-testid="TransactionRowMode__Sent"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        sent.svg
                      </svg>
                    </div>
                  </div>
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full"
                    >
                      <img
                        alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                        title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="inline-flex items-center"
                >
                  <span
                    class="sc-AxgMl fFPQpl text-theme-text truncate font-semibold text-base"
                    data-testid="address__wallet-address"
                  >
                    D8rr7B … s6YUYD
                  </span>
                </div>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb udmdB justify-center"
              >
                <div
                  class="inline-flex space-x-1 align-middle"
                  data-testid="TransactionRowInfo"
                >
                  <span
                    class="p-1"
                  >
                    <div
                      class="sc-AxirZ jZjiyi"
                      data-testid="TransactionRowInfo__multiSignature"
                      height="14"
                      width="22"
                    >
                      <svg>
                        multisig.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
            </td>
            <td
              class="w-16"
            >
              <div
                class="sc-AxhCb udmdB justify-center truncate"
              >
                <span
                  class="p-1 text-theme-danger-400"
                >
                  <div
                    class="sc-AxirZ eEbZjj"
                    height="20"
                    width="20"
                  >
                    <svg>
                      awaiting-our-signature.svg
                    </svg>
                  </div>
                </span>
              </div>
            </td>
            <td
              class="w-56"
            >
              <div
                class="sc-AxhCb udmdB justify-end"
              >
                <div
                  class="sc-AxheI kinEEx"
                  color="danger"
                  data-testid="TransactionRowAmount"
                >
                  <span
                    data-testid="Amount"
                  >
                    0.00000002 DARK
                  </span>
                </div>
              </div>
            </td>
            <td
              class="w-24"
            >
              <div
                class="sc-AxhCb fYMCjD justify-end"
              />
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Signed Transaction Table should show as final signature 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="SignedTransactionTable"
  >
    <div
      class="sc-AxiKw iDVQWj -mt-3"
      role="table"
    >
      <table
        cellpadding="0"
        class="table-auto"
      >
        <thead>
          <tr
            class="border-b border-theme-neutral-300 dark:border-theme-neutral-800"
            role="row"
          >
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  ID
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Date
                </div>
                <div
                  class="flex items-center ml-2 text-theme-neutral dark:text-theme-neutral-dark"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxirZ jMwzyA"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top ml-25"
              >
                <div>
                  Recipient
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--3"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top justify-center"
              >
                <div>
                  Info
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--4"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top justify-center"
              >
                <div>
                  Status
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold  "
              colspan="1"
              data-testid="table__th--5"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top justify-end no-border"
              >
                <div>
                  Amount
                </div>
                <div
                  class="flex items-center ml-2 text-theme-neutral dark:text-theme-neutral-dark"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxirZ jMwzyA"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--6"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top hidden"
              >
                <div>
                  Sign
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="sc-AxhUy gFzLrG group"
            data-testid="TableRow"
          >
            <td>
              <div
                class="sc-AxhCb hbkWNL"
              >
                <span
                  class="sc-AxgMl fFPQpl"
                  data-testid="TruncateMiddle"
                >
                  19a78b … 6993dd
                </span>
              </div>
            </td>
            <td
              class="w-50"
            >
              <div
                class="sc-AxhCb udmdB text-theme-secondary-text"
              >
                <span
                  data-testid="TransactionRow__timestamp"
                >
                  31 Jul 2020 16:34:41
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb udmdB space-x-4"
              >
                <div
                  class="flex items-center -space-x-1"
                  data-testid="TransactionRowMode"
                >
                  <div
                    class="sc-Axmtr hVOxCZ border-theme-danger-contrast text-theme-danger dark:border-theme-danger-400 dark:text-theme-danger-400"
                  >
                    <div
                      class="sc-AxirZ iQaTP"
                      data-testid="TransactionRowMode__Sent"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        sent.svg
                      </svg>
                    </div>
                  </div>
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full"
                    >
                      <img
                        alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                        title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="inline-flex items-center"
                >
                  <span
                    class="sc-AxgMl fFPQpl text-theme-text truncate font-semibold text-base"
                    data-testid="address__wallet-address"
                  >
                    D8rr7B … s6YUYD
                  </span>
                </div>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb udmdB justify-center"
              >
                <div
                  class="inline-flex space-x-1 align-middle"
                  data-testid="TransactionRowInfo"
                >
                  <span
                    class="p-1"
                  >
                    <div
                      class="sc-AxirZ jZjiyi"
                      data-testid="TransactionRowInfo__multiSignature"
                      height="14"
                      width="22"
                    >
                      <svg>
                        multisig.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
            </td>
            <td
              class="w-16"
            >
              <div
                class="sc-AxhCb udmdB justify-center truncate"
              >
                <span
                  class="p-1 text-theme-success-500"
                >
                  <div
                    class="sc-AxirZ gfsEGU"
                    height="22"
                    width="30"
                  >
                    <svg>
                      awaiting-final-signature.svg
                    </svg>
                  </div>
                </span>
              </div>
            </td>
            <td
              class="w-56"
            >
              <div
                class="sc-AxhCb udmdB justify-end"
              >
                <div
                  class="sc-AxheI kinEEx"
                  color="danger"
                  data-testid="TransactionRowAmount"
                >
                  <span
                    data-testid="Amount"
                  >
                    0.00000002 DARK
                  </span>
                </div>
              </div>
            </td>
            <td
              class="w-24"
            >
              <div
                class="sc-AxhCb fYMCjD justify-end"
              />
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Signed Transaction Table should show the sign button 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="SignedTransactionTable"
  >
    <div
      class="sc-AxiKw iDVQWj -mt-3"
      role="table"
    >
      <table
        cellpadding="0"
        class="table-auto"
      >
        <thead>
          <tr
            class="border-b border-theme-neutral-300 dark:border-theme-neutral-800"
            role="row"
          >
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  ID
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Date
                </div>
                <div
                  class="flex items-center ml-2 text-theme-neutral dark:text-theme-neutral-dark"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxirZ jMwzyA"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top ml-25"
              >
                <div>
                  Recipient
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--3"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top justify-center"
              >
                <div>
                  Info
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--4"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top justify-center"
              >
                <div>
                  Status
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold  "
              colspan="1"
              data-testid="table__th--5"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top justify-end no-border"
              >
                <div>
                  Amount
                </div>
                <div
                  class="flex items-center ml-2 text-theme-neutral dark:text-theme-neutral-dark"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxirZ jMwzyA"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--6"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top hidden"
              >
                <div>
                  Sign
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="sc-AxhUy gFzLrG group"
            data-testid="TableRow"
          >
            <td>
              <div
                class="sc-AxhCb hbkWNL"
              >
                <span
                  class="sc-AxgMl fFPQpl"
                  data-testid="TruncateMiddle"
                >
                  e4d245 … 150377
                </span>
              </div>
            </td>
            <td
              class="w-50"
            >
              <div
                class="sc-AxhCb udmdB text-theme-secondary-text"
              >
                <span
                  data-testid="TransactionRow__timestamp"
                >
                  31 Jul 2020 16:34:41
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb udmdB space-x-4"
              >
                <div
                  class="flex items-center -space-x-1"
                  data-testid="TransactionRowMode"
                >
                  <div
                    class="sc-Axmtr hVOxCZ border-theme-danger-contrast text-theme-danger dark:border-theme-danger-400 dark:text-theme-danger-400"
                  >
                    <div
                      class="sc-AxirZ iQaTP"
                      data-testid="TransactionRowMode__Sent"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        sent.svg
                      </svg>
                    </div>
                  </div>
                  <div
                    class="sc-Axmtr hVOxCZ border-theme-text text-theme-text dark:border-theme-neutral-600 dark:text-theme-neutral-600"
                    data-testid="TransactionRowRecipientIcon"
                  >
                    <div
                      class="sc-AxirZ hmuEJr"
                      height="22"
                      width="22"
                    >
                      <svg>
                        multisig.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <span
                  class="font-semibold text-theme-text"
                  data-testid="TransactionRowRecipientLabel"
                >
                  Multisignature
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb udmdB justify-center"
              >
                <div
                  class="inline-flex space-x-1 align-middle"
                  data-testid="TransactionRowInfo"
                >
                  <span
                    class="p-1"
                  >
                    <div
                      class="sc-AxirZ jZjiyi"
                      data-testid="TransactionRowInfo__multiSignature"
                      height="14"
                      width="22"
                    >
                      <svg>
                        multisig.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
            </td>
            <td
              class="w-16"
            >
              <div
                class="sc-AxhCb udmdB justify-center truncate"
              >
                <span
                  class="p-1 text-theme-success-500"
                >
                  <div
                    class="sc-AxirZ gfsEGU"
                    height="22"
                    width="30"
                  >
                    <svg>
                      awaiting-final-signature.svg
                    </svg>
                  </div>
                </span>
              </div>
            </td>
            <td
              class="w-56"
            >
              <div
                class="sc-AxhCb udmdB justify-end"
              >
                <div
                  class="sc-AxheI kinEEx"
                  color="danger"
                  data-testid="TransactionRowAmount"
                >
                  <span
                    data-testid="Amount"
                  >
                    15 DARK
                  </span>
                </div>
              </div>
            </td>
            <td
              class="w-24"
            >
              <div
                class="sc-AxhCb fYMCjD justify-end"
              >
                <button
                  class="sc-AxjAm fCKjFI"
                  color="primary"
                  data-testid="TransactionRow__sign"
                  type="button"
                >
                  <div
                    class="sc-AxirZ iQaTP"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      edit.svg
                    </svg>
                  </div>
                  <span>
                    Sign
                  </span>
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
